--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "resend/resend-php": "^0.12.0",
         "symfony/http-client": "^7.0",
         "symfony/mailgun-mailer": "^7.0"
     },
