--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:bENlHHpBMpiR0L9U/tSmCI2ePQ+J/bNH/6Gy0E655gE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://ex-change.es
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=exchange		
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=exchangeBBDD		
+DB_USERNAME=userExchange
+DB_PASSWORD=bqM29w2%9
 
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
@@ -53,7 +53,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=exchange.servicio.cliente@gmail.com
-MAIL_PASSWORD=af&7DceA3G3D
+MAIL_PASSWORD=k k j w a l v g d p x r l i c d
 MAIL_FROM_ADDRESS=exchange.servicio.cliente@gmail.com
 
 
