--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:bENlHHpBMpiR0L9U/tSmCI2ePQ+J/bNH/6Gy0E655gE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=https://ex-change.es
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -53,7 +53,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=exchange.servicio.cliente@gmail.com
-MAIL_PASSWORD=k k j w a l v g d p x r l i c d
+MAIL_PASSWORD=af&7DceA3G3D
 MAIL_FROM_ADDRESS=exchange.servicio.cliente@gmail.com
 
 
